[package]
name = "posterior"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/mod.rs"

[dependencies]
actix-web = "4.1.0"
aes-gcm = "0.9.4"
argon2 = "0.4.0"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
jsonwebtoken = "8.1.1"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = [
    "runtime-actix-native-tls",
    "postgres",
    "migrate",
    "macros",
] }
