[package]
name = "osiris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "osiris"
path = "src/bin/main.rs"

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.1.0"
aes-gcm = "0.9.4"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
fancy-regex = "0.10.0"
futures = "0.3.21"
jsonwebtoken = "8.1.1"
log = "0.4.17"
rust-argon2 = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
slug = "0.1.4"
sqlx = { version = "0.6.0", features = [
    "chrono",
    "runtime-actix-native-tls",
    "postgres",
    "migrate",
    "macros",
] }
